[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyget"
version = "3.2.2"
description = "Python3 Bitget Asyncio HTTP/WebSocket API Connector"
readme = "README.md"
readme-content-type = "text/markdown"
requires-python = ">=3.8"
license = {text = "MIT License"}
authors = [
    {name = "APF20", email = ""}
]
keywords = ["bitget", "api", "connector", "asyncio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "aiohttp",
]

[project.urls]
Repository = "https://github.com/APF20/pyget"
Homepage = "https://github.com/APF20/pyget"

[tool.setuptools.package-dir]
"" = "src"
